tests/paczka1/fuzzy1/74394217.err
Error in line 10: drermJ S182 81,7
Error in line 13: Xf63bKma S454 73,9
Error in line 19: Xf63bKma A19 15,7
Error in line 16: drermJ S964 15,2
Error in line 8: MDSK511kX S454 5,9
Error in line 26: MDSK511kX A19 17,2
Error in line 34: R3G3rWVFK S182 77,6
Error in line 37: clCsy S964 86,3
Error in line 31: Xf63bKma S182 13,3
